<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.yogenders.myappportfolio.MainActivity"
    android:background="@color/colorBg"
    android:padding="@dimen/flatter"
    android:layout_margin="@dimen/flatter">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingBottom="@dimen/element_spacer"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/main_text"
                android:id="@+id/main_text"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/element_spacer"
                android:textColor="@color/colorBlack"/>

            <Button
                android:text="@string/btn_text_steamer"
                android:id="@+id/btn_streamer"
                android:layout_below="@+id/main_text"
                android:layout_marginTop="@dimen/element_spacer"
                style="@style/Btn"
                />

            <Button
                android:text="@string/btn_text_duo"
                android:id="@+id/btn_duo"
                android:layout_below="@+id/btn_streamer"
                style="@style/Btn"
                />

            <Button
                android:text="@string/btn_text_build_bigger"
                android:id="@+id/btn_build_bigger"
                android:layout_below="@+id/btn_duo"
                style="@style/Btn"
                />

            <Button
                android:text="@string/btn_text_reader"
                android:id="@+id/btn_reader"
                android:layout_below="@+id/btn_build_bigger"
                style="@style/Btn"
                />

            <Button
                android:text="@string/btn_text_capstone"
                android:id="@+id/btn_capstone"
                android:layout_below="@+id/btn_reader"
                style="@style/Btn.Pink"
                />

        </RelativeLayout>

    </ScrollView>



</RelativeLayout>
